--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Font Awesome CDN  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Tailwind css Link  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -38,8 +42,34 @@
 </head>
 
 <body>
-    <header>
-        <h2 class="text-3xl text-red-500">Testing</h2>
+    <header class="container mx-auto">
+        <section class="banner-container">
+            <div class="hero ">
+                <div class="hero-content flex gap-x-5 flex-col md:flex-row lg:flex-row">
+
+                    <div class="space-y-7">
+                        <h1 class="text-5xl md:text-7xl lg:text-7xl font-extrabold">It's good <br>
+                            tea time at <br> The Tea House</h1>
+                        <p class=" text-lg">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
+                            Buds.</p>
+                        <button class="btn btn-primary">Get Started</button>
+                    </div>
+                    <div>
+                        <img src="./images/banner.png" class="max-w-sm " />
+                        <!-- ratting badge  -->
+                        <div
+                            class="flex gap-4 w-64 bg-white drop-shadow-lg rounded p-5 -mt-16 justify-center items-center ">
+                            <i class="fa-solid fa-star text-4xl text-amber-400"></i>
+                            <div>
+                                <h2 class="text-3xl font-extrabold">5.00</h2>
+                                <p class="text-lg font-semibold">Trust Pilot Ratings</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
