feature section complate

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <header class="container mx-auto">
+    <header class="container mx-auto mb-24">
         <section class="banner-container">
             <div class="hero ">
                 <div class="hero-content flex gap-x-5 flex-col md:flex-row lg:flex-row">
@@ -58,7 +58,7 @@
                         <img src="./images/banner.png" class="max-w-sm " />
                         <!-- ratting badge  -->
                         <div
-                            class="flex gap-4 w-64 bg-white drop-shadow-lg rounded p-5 -mt-16 justify-center items-center ">
+                            class="flex gap-4 w-64 bg-white drop-shadow-lg rounded p-5 -mt-14 justify-center items-center ">
                             <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                             <div>
                                 <h2 class="text-3xl font-extrabold">5.00</h2>
@@ -71,7 +71,71 @@
             </div>
         </section>
     </header>
-    <main></main>
+    <main class="container mx-auto">
+        <!-- Feature Section Start  -->
+        <secton class="feature-container text-center">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="md:w-[900px] lg:w-[900px] mx-auto mb-12">There are many variations of passages of Lorem Ipsum
+                available, but the
+                majority have
+                suffered alteration
+                in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+            <!-- Cart Start  -->
+            <div
+                class="cart-container grid grid-cols-1 m-7  md:grid-cols-2 lg:grid-cols-4 gap-5 md:m-0 lg:m-0 items-center justify-center">
+                <!-- first cart  -->
+                <div class="card   drop-shadow-lg bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-3xl font-extrabold">Milk Coffee</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+
+                    </div>
+                </div>
+                <!-- Second Cart  -->
+                <div class="card   drop-shadow-lg bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-2.png" alt="coffee" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-3xl font-extrabold">Black Coffee</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+
+                    </div>
+                </div>
+
+                <!-- Third Cart  -->
+                <div class="card   drop-shadow-lg bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-3.png" alt="coffee" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-3xl font-extrabold">Lemon Coffee</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+
+                    </div>
+                </div>
+
+                <!-- Fourth Card  -->
+                <div class="card   drop-shadow-lg bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/tea-4.png" alt="coffee" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title text-3xl font-extrabold">Green Coffee</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+
+                    </div>
+                </div>
+
+            </div>
+        </secton>
+        <!-- Feature Section End -->
+
+    </main>
     <footer></footer>
 
 </body>
