super client section complated

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'great-coffee': 'rgba(87, 118, 57, 0.10)',
                     }
                 }
             }
@@ -49,7 +50,7 @@
 
                     <div class="space-y-7">
                         <h1 class="text-5xl md:text-7xl lg:text-7xl font-extrabold">It's good <br>
-                            tea time at <br> The Tea House</h1>
+                            tea time at <br> The Coffee Shop</h1>
                         <p class=" text-lg">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
                             Buds.</p>
                         <button class="btn btn-primary">Get Started</button>
@@ -134,6 +135,95 @@
             </div>
         </secton>
         <!-- Feature Section End -->
+        <!-- Greate Coffee Section Start  -->
+        <section
+            class="great-container flex flex-col md:flex-row lg:flex-row md:items-center lg:items-center gap-14 my-5 md:my-36 mx-5 md:mx-0 lg:mx-0">
+            <div
+                class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-2 flex-1 grid-rows-1 md:grid-rows-3 lg:grid-rows-3 ">
+                <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded"></div>
+                <div class="bg-great-coffee row-span-2  rounded p-8"><img class="mx-auto" src="./images/fresh-2.png"
+                        alt="">
+                </div>
+                <div class="bg-great-coffee row-span-2 rounded p-8"><img class="mx-auto" src="./images/fresh-1.png"
+                        alt="">
+                </div>
+                <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded"></div>
+            </div>
+            <div class="flex-1 space-y-6">
+                <h2 class="text-5xl font-extrabold text-[#1c1c1c]">Great Tea, Freshly <br> Presented</h2>
+                <p class="text-lg text-[#777]">The meaning of gong cha is chanese is to provide the best tea to emperor
+                    from all
+                    possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
+                <h3 class="text-xl font-extrabold">Unique Taste</h3>
+                <p class="text-lg text-[#777]">A Unique and different style from other teapots gives a luxurious and
+                    minimalist impression</p>
+                <h3 class="text-xl font-extrabold">Premium Quality</h3>
+                <p class="text-lg text-[#777]">Premium Quality that makes tea more elegant and more durable when you use
+                    it.</p>
+            </div>
+        </section>
+        <!-- Greate Coffee Section End -->
+        <!-- Super Client Section Start -->
+        <section
+            class="super-container flex flex-col md:flex-row lg:flex-row px-5 py-5 md:px-16 lg:px-16 md:py-20 lg:py-20 gap-x-20   bg-gradient-to-r from-red-500 from-0% to-orange-500 to-100% items-center justify-between mx-5 md:mx-0 lg:mx-0 my-5 md:my-36 lg:my-36">
+            <div class="flex-1 space-y-7">
+                <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
+                <p class="text-lg font-medium text-white ">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. </p>
+                <button class="btn text-[#FF8938]">Show All</button>
+            </div>
+            <div class="space-y-7 md:space-y-14 lg:space-y14 relative mt-10 md:mt-0 lg:mt-0 ">
+
+                <div
+                    class="relative md:absolute lg:absolute left-0 top-0 md:-left-20 lg:-left-20 md:top-[35%] lg:top-[35%] w-auto md:w-[500px] lg:w-[500px] drop-shadow-lg z-20 m-0 md:m-0 lg:m-0">
+                    <div class="bg-white p-7 relative rounded-lg">
+                        <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
+                        <p class="text-lg font-normal text-[#777] mb-5">We are providing the best and suitable home
+                            insurance
+                            services for
+                            the people who are interested
+                            to treatment</p>
+                        <h2 class="text-xl font-extrabold text-[#1c1c1c]">Mehedi GMR</h2>
+                        <p class="text-[#777]">Developer</p>
+                    </div>
+                </div>
+
+                <div
+                    class=" rounded-lg w-auto md:w-[500px] lg:w-[500px] opacity-10 drop-shadow-lg z-10 p-0 md:p-0 lg:p-0">
+                    <div class="bg-white p-7 relative rounded-lg">
+                        <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
+                        <p class="text-lg font-normal text-[#777] mb-5">We are providing the best and suitable home
+                            insurance
+                            services for
+                            the people who are interested
+                            to treatment</p>
+                        <h2 class="text-xl font-extrabold text-[#1c1c1c]">Mehedi GMR</h2>
+                        <p class="text-[#777]">Developer</p>
+                    </div>
+                </div>
+
+                <div class="rounded-lg w-auto md:w-[500px] lg:w-[500px] opacity-10 drop-shadow-lg z-10">
+                    <div class="bg-white p-7 relative rounded-lg">
+                        <img class="absolute -top-5 -left-5" src="./images/client.png" alt="">
+                        <p class="text-lg font-normal text-[#777] mb-5">We are providing the best and suitable home
+                            insurance
+                            services for
+                            the people who are interested
+                            to treatment</p>
+                        <h2 class="text-xl font-extrabold text-[#1c1c1c]">Mehedi GMR</h2>
+                        <p class="text-[#777]">Developer</p>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- Super Client Section End -->
 
     </main>
     <footer></footer>
