news section complate

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="hero-content flex gap-x-5 flex-col md:flex-row lg:flex-row">
 
                     <div class="space-y-7">
-                        <h1 class="text-5xl md:text-7xl lg:text-7xl font-extrabold">It's good <br>
+                        <h1 class="text-5xl md:text-5xl lg:text-7xl font-extrabold">It's good <br>
                             tea time at <br> The Coffee Shop</h1>
                         <p class=" text-lg">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
                             Buds.</p>
@@ -224,6 +224,67 @@
             </div>
         </section>
         <!-- Super Client Section End -->
+        <!-- News Section Start  -->
+        <section class="news-container mt-10 m-5 md:m-0 lg:m-0">
+            <h2 class="text-5xl font-extrabold text-center">News & Events</h2>
+            <p class="text-lg font-medium w-auto md:w-[900px] lg:w-[900px] mx-auto">There are many variations of
+                passages of Lorem Ipsum available,
+                but the
+                majority have suffered alteration
+                in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+            <div class="news-cart-container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/news-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body ">
+                        <p class="text-lg font-medium text-[#777]">Feb 05, 2027</p>
+                        <h2 class="card-title text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-lg font-medium">There are many variations of passages of Lorem Ipsum available.
+                        </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-white border-none">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/news-2.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body ">
+                        <p class="text-lg font-medium text-[#777]">Feb 05, 2027</p>
+                        <h2 class="card-title text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-lg font-medium">There are many variations of passages of Lorem Ipsum available.
+                        </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-white border-none">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/news-3.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body ">
+                        <p class="text-lg font-medium text-[#777]">Feb 05, 2027</p>
+                        <h2 class="card-title text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-lg font-medium">There are many variations of passages of Lorem Ipsum available.
+                        </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-white border-none">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
+        <!-- News Section End -->
 
     </main>
     <footer></footer>
