--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
             class="great-container flex flex-col md:flex-row lg:flex-row md:items-center lg:items-center gap-14 my-5 md:my-36 mx-5 md:mx-0 lg:mx-0">
             <div
                 class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-2 flex-1 grid-rows-1 md:grid-rows-3 lg:grid-rows-3 ">
-                <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded"></div>
+                <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded-lg"></div>
                 <div class="bg-great-coffee row-span-2  rounded p-8"><img class="mx-auto" src="./images/fresh-2.png"
                         alt="">
                 </div>
-                <div class="bg-great-coffee row-span-2 rounded p-8"><img class="mx-auto" src="./images/fresh-1.png"
+                <div class="bg-great-coffee row-span-2 rounded-lg p-8"><img class="mx-auto" src="./images/fresh-1.png"
                         alt="">
                 </div>
-                <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded"></div>
+                <div class="bg-gradient-to-r from-red-100 to-orange-100 rounded-lg "></div>
             </div>
             <div class="flex-1 space-y-6">
                 <h2 class="text-5xl font-extrabold text-[#1c1c1c]">Great Tea, Freshly <br> Presented</h2>
@@ -208,7 +208,7 @@
         <!-- Greate Coffee Section End -->
         <!-- Super Client Section Start -->
         <section
-            class="super-container flex flex-col md:flex-row lg:flex-row px-5 py-5 md:px-16 lg:px-16 md:py-20 lg:py-20 gap-x-20   bg-gradient-to-r from-red-500 from-0% to-orange-500 to-100% items-center justify-between mx-5 md:mx-0 lg:mx-0 my-5 md:my-36 lg:my-36">
+            class="super-container flex flex-col md:flex-row lg:flex-row px-5 py-5 md:px-16 lg:px-16 md:py-20 lg:py-20 gap-x-20   bg-gradient-to-r from-red-500 from-0% to-orange-500 to-100% items-center justify-between mx-5 md:mx-0 lg:mx-0 my-5 md:my-36 lg:my-36 rounded-lg">
             <div class="flex-1 space-y-7">
                 <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h2>
                 <p class="text-lg font-medium text-white ">There are many variations of passages of Lorem Ipsum
